Test configuration alignment

--- a/tests/vitamins/jack-test.conf
+++ b/tests/vitamins/jack-test.conf
@@ -79,7 +79,7 @@ single  = SHOW==\"FL_JACK_BARREL\"  ? FL_JACK_BARREL
         : undef;
 
 if (single)
-  fl_jack(verbs,single,cut_drift=drift,co_dirs=cut_dirs,octant=octant,direction=direction);
+  fl_jack(verbs,single,cut_drift=drift,cut_dirs=cut_dirs,octant=octant,direction=direction);
 else
   layout([for(socket=FL_JACK_DICT) fl_width(socket)], 10)
-    fl_jack(verbs,FL_JACK_DICT[\$i],cut_drift=drift,co_dirs=cut_dirs,octant=octant,direction=direction);"
+    fl_jack(verbs,FL_JACK_DICT[\$i],cut_drift=drift,cut_dirs=cut_dirs,octant=octant,direction=direction);"
