--- a/tests/vitamins/sata-test.conf
+++ b/tests/vitamins/sata-test.conf
@@ -83,7 +83,7 @@ connected_device  =
   CONNECT==\"hd\" && PART==\"power data socket\" ? FL_HD_EVO860 :
   undef;
 
-fl_sata(verbs,type,drift=DRIFT,octant=octant,direction=direction,\$fl_tolerance=TOLERANCE,\$fl_thickness=T);
+fl_sata(verbs,type,cut_drift=DRIFT,octant=octant,direction=direction,\$fl_tolerance=TOLERANCE,\$fl_thickness=T);
 if (connected_device)
   fl_connect(son=[connected_device,0], parent=[type,0], octant=octant, direction=direction)
     if (fl_engine(\$con_child)==FL_HD_NS)
