Refactor and enhance screw and rail functionalities
- Updated documentation to clarify usage of `children()` in `fl_rail()`.
- Added new functions and variables related to customizer engine in the foundation and vitamins modules.
- Introduced a new Makefile for generating images in 400x800 size.
- Enhanced the screw module with new functions for screw characteristics and assembly.
- Updated tests to reflect changes in screw and rail functionalities, including new test cases for screw assembly.
- Refactored existing tests to utilize the customizer engine for better flexibility.
- Improved JSON test configurations for better clarity and usability.

--- a/orthodocs/vitamins/256x256/Makefile
+++ b/orthodocs/vitamins/256x256/Makefile
@@ -4,7 +4,8 @@ include $(wildcard *.deps)
 # get desired image sizes from current directory name
 SIZE		:= $(notdir $(CURDIR))
 SOURCES 	:= $(wildcard fig_*.scad)
-TARGETS		:= $(SOURCES:.scad=.png) fig_FL_IEC_FUSED_INLET.png fig_FL_IEC_FUSED_INLET2.png \
+TARGETS		:= $(SOURCES:.scad=.png) fig_DOME_SCREW_EXAMPLE.png \
+fig_FL_IEC_FUSED_INLET.png fig_FL_IEC_FUSED_INLET2.png \
 fig_FL_IEC_320_C14_SWITCHED_FUSED_INLET.png fig_FL_IEC_INLET.png fig_FL_IEC_INLET_ATX.png \
 fig_FL_IEC_INLET_ATX2.png fig_FL_IEC_YUNPEN.png fig_FL_IEC_OUTLET.png \
 fig_jack_barrel_supported_cutouts.png fig_jack_edge_supported_cutouts.png
@@ -26,6 +27,11 @@ fig_jack_edge_supported_cutouts.png: $(call test-deps,vitamins/jack)
 fig_FL_IEC_%.png: iecs.scad iecs.json
 	$(call target-prologue)
 	$(call make-picture,$(SIZE))
+	$(call target-epilogue-success)
+
+fig_DOME_SCREW_EXAMPLE.png: $(call test-deps,foundation/util)
+	$(call target-prologue)
+	$(call make-picture,$(SIZE),$(make-camera -0.228292,-0.831419,-0.862859,48.7,0,13.1,69.3551),,--view axes)
 	$(call target-epilogue-success)
 
 clean:
