--- a/tests/foundation/hole-test.conf
+++ b/tests/foundation/hole-test.conf
@@ -2,9 +2,10 @@ TEST_DESCRIPTION="Hole engine test"
 TEST_TEMPLATE="template-3d.scad"
 # CAMERA="--camera 0,0,0,0,0,0,7"
 TEST_INCLUDES="
-include <../../lib/OFL/foundation/hole.scad>
 include <../../lib/OFL/foundation/util.scad>
 include <../../lib/OFL/vitamins/screw.scad>
+
+use <../../lib/OFL/foundation/hole-engine.scad>
 "
 # TAB_PARAMETERS=""
 # TAB_Verbs=""
