Enhance customizer engine and related tests
- Updated `fl_cust_undef` function documentation in `customizer-engine.md` to clarify its parameters and usage.
- Added `fl_kv_dump` module reference to the table of contents in `toc.md`.
- Modified screw specifications in `screw.md` to set default values for `longer_than` parameters.
- Refactored test scripts for joints, PCB holder, spacer, and screws to improve readability and maintainability.
- Updated `screw-test.conf` and `util-test.conf` to include customizer engine usage and improved parameter handling.
- Enhanced the handling of screw specifications in various test scripts to utilize the new customizer functions.
- Cleaned up formatting and added comments for better clarity in test scripts.

--- a/examples/snapmaker/Makefile
+++ b/examples/snapmaker/Makefile
@@ -6,6 +6,9 @@
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 
+# explicit wildcard expansion suppresses errors when no files are found
+include $(wildcard *.deps) $(FUNCTIONS) $(DEF_RULES)
+
 # 'Lazy Set'
 T_LIST		= blob-mount camera-mount Snapmaker-enclosure-handles spool-holder
 
