--- a/tests/vitamins/magnet-test.conf
+++ b/tests/vitamins/magnet-test.conf
@@ -82,9 +82,9 @@ verbs=fl_verbList([
 ]);
 
 module do_test(magnet) {
-  screw = fl_screw(magnet);
+  nop = fl_screw_specs(magnet);
   fl_magnet(verbs,magnet,octant=octant,direction=direction,\$fl_tolerance=TOLERANCE,\$fl_thickness=T)
-      if (screw!=undef) fl_color(\"green\") fl_cylinder(h=fl_thick(magnet),r=screw_radius(screw),octant=-Z);
+    if (nop) fl_color(\"green\") fl_cylinder(h=fl_thick(magnet),r=screw_radius(nop),octant=-Z);
 }
 
 if (SHOW>-1)
