--- a/tests/vitamins/screw-test.conf
+++ b/tests/vitamins/screw-test.conf
@@ -7,7 +7,8 @@ TEST_TEMPLATE="template-3d.scad"
 TEST_INCLUDES="
 include <../../lib/OFL/foundation/core.scad>
 include <../../lib/OFL/vitamins/screw.scad>
-"
+
+use <../../lib/OFL/foundation/customizer-engine.scad>"
 
 # TAB_PARAMETERS="
 # \$fn            = 50;           // [3:100]
@@ -32,6 +33,8 @@ TAB_Verbs="
 \$FL_AXES      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // adds a bounding box containing the object
 \$FL_BBOX      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+// layout of predefined cutout shapes (+X,-X,+Y,-Y,+Z,-Z)
+\$FL_CUTOUT    = \"OFF\";   // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // layout of predefined drill shapes (like holes with predefined screw diameter)
 \$FL_DRILL     = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // adds a footprint to scene, usually a simplified FL_ADD
@@ -56,114 +59,93 @@ TAB_Verbs="
 # "
 
 TAB_TEST="
-/* [Screw] */
+/* [Dimension Lines] */
 
-SCREW       = \"ALL\";  // [ALL, No632_pan_screw,M2_cap_screw,M2_cs_cap_screw,M2_dome_screw,M2p5_cap_screw,M2p5_pan_screw,M3_cap_screw,M3_cs_cap_screw,M3_dome_screw,M3_grub_screw,M3_hex_screw,M3_low_cap_screw,M3_pan_screw,M4_cap_screw,M4_cs_cap_screw,M4_dome_screw,M4_grub_screw,M4_hex_screw,M4_pan_screw,M5_cap_screw,M5_cs_cap_screw,M5_dome_screw,M5_hex_screw,M5_pan_screw,M6_cap_screw,M6_cs_cap_screw,M6_hex_screw,M6_pan_screw,M8_cap_screw,M8_hex_screw,No2_screw,No4_screw,No6_cs_screw,No6_screw,No8_screw]
-HEAD_TYPE   = \"ANY\";  // [ANY, cap, pan, cs, hex, grub, cs cap, dome]
-FIXED_LEN   = 0;
-// thickness
-T           = 10;     // [1:0.1:20]
-WASHER      = \"no\";   // [no,default,penny,nylon]
-XWASHER     = \"no\";   // [no,spring,star]
-// add a default washer before the nut
-NUT_WASHER  = false;
-NUT         = \"no\";   // [no,default,nyloc]
-DRILL_TYPE  = \"clearance\";  // [clearance,tap]
-"
+VIEW_TYPE     = \"other\";    // [other,right,top,bottom,left,front,back]
+DIM_MODE      = \"full\";     // [full,label,value,silent]
+DIM_GAP       = 1;          // [1:.1:10]
+DIM_W         = 0.05;       // [0.01:0.01:1]
 
+/* [Screw select] */
 
+SCREW_NAME  = \"*\";  // [*, M2_cap, M2p5_cap, M3_cap, M4_cap, M5_cap, M6_cap, M8_cap, M3_low_cap, M3_shoulder, M4_shoulder, M2_cs_cap, M3_cs_cap, M4_cs_cap, M5_cs_cap, M6_cs_cap, M8_cs_cap, M2_dome, M2p5_dome, M3_dome, M4_dome, M5_dome, M3_hex, M4_hex, M5_hex, M6_hex, M8_hex, M2p5_pan, M3_pan, M4_pan, M5_pan, M6_pan, No632_pan, No2, No4, No6, No8, No6_cs, M3_grub, M4_grub, M5_grub, M6_grub]
+HEAD_TYPE   = \"*\";  // [*, cap, pan, cs, hex, grub, cs cap, dome]
+
+/* [Screw parameters] */
+
+// shaft length
+LENGTH_MODE   = \"exact\";      // [exact, longer, shorter]
+SHAFT_LENGTH  = 0;            // [0:0.1:25]
+
+HEAD_SPRING   = \"undef\";      // [undef, spring, star]
+HEAD_WASHER   = \"undef\";      // [undef, default, penny]
+
+NUT_WASHER    = \"undef\";      // [undef, default, penny]
+NUT_SPRING    = \"undef\";      // [undef, spring, star]
+NUT           = \"undef\";      // [undef, default, nyloc]
+
+DRILL_TYPE    = \"clearance\";  // [clearance,tap]
+
+/* [Context] */
+
+\$fl_thickness = 10; // [1:0.1:20]
+\$fl_tolerance = 0;  // [.1:0.1:1]"
 
 TEST_CODE="
-module screw_proxy(screw) {
-  fl_screw(verbs,screw,\$fl_thickness=T,washer=WASHER,nut=NUT,xwasher=XWASHER,nwasher=nut_washer,len=FIXED_LEN?FIXED_LEN:undef,dri_type=DRILL_TYPE,octant=octant,direction=direction)
-    children();
-}
+\$vpr        = fl_view(VIEW_TYPE);
+\$dim_mode   = DIM_MODE;
+\$dim_width  = DIM_W;
 
-verbs = fl_verbList([FL_ADD,FL_ASSEMBLY,FL_AXES,FL_BBOX,FL_DRILL,FL_FOOTPRINT]);
-screw = fl_switch(SCREW,  cases=[
-  [\"No632_pan_screw\" , No632_pan_screw  ],
-  [\"M2_cap_screw\"    , M2_cap_screw     ],
-  [\"M2_cs_cap_screw\" , M2_cs_cap_screw  ],
-  [\"M2_dome_screw\"   , M2_dome_screw    ],
-  [\"M2p5_cap_screw\"  , M2p5_cap_screw   ],
-  [\"M2p5_pan_screw\"  , M2p5_pan_screw   ],
-  [\"M3_cap_screw\"    , M3_cap_screw     ],
-  [\"M3_cs_cap_screw\" , M3_cs_cap_screw  ],
-  [\"M3_dome_screw\"   , M3_dome_screw    ],
-  [\"M3_grub_screw\"   , M3_grub_screw    ],
-  [\"M3_hex_screw\"    , M3_hex_screw     ],
-  [\"M3_low_cap_screw\", M3_low_cap_screw ],
-  [\"M3_pan_screw\"    , M3_pan_screw     ],
-  [\"M4_cap_screw\"    , M4_cap_screw     ],
-  [\"M4_cs_cap_screw\" , M4_cs_cap_screw  ],
-  [\"M4_dome_screw\"   , M4_dome_screw    ],
-  [\"M4_grub_screw\"   , M4_grub_screw    ],
-  [\"M4_hex_screw\"    , M4_hex_screw     ],
-  [\"M4_pan_screw\"    , M4_pan_screw     ],
-  [\"M5_cap_screw\"    , M5_cap_screw     ],
-  [\"M5_cs_cap_screw\" , M5_cs_cap_screw  ],
-  [\"M5_dome_screw\"   , M5_dome_screw    ],
-  [\"M5_hex_screw\"    , M5_hex_screw     ],
-  [\"M5_pan_screw\"    , M5_pan_screw     ],
-  [\"M6_cap_screw\"    , M6_cap_screw     ],
-  [\"M6_cs_cap_screw\" , M6_cs_cap_screw  ],
-  [\"M6_hex_screw\"    , M6_hex_screw     ],
-  [\"M6_pan_screw\"    , M6_pan_screw     ],
-  [\"M8_cap_screw\"    , M8_cap_screw     ],
-  [\"M8_hex_screw\"    , M8_hex_screw     ],
-  [\"No2_screw\"       , No2_screw        ],
-  [\"No4_screw\"       , No4_screw        ],
-  [\"No6_cs_screw\"    , No6_cs_screw     ],
-  [\"No6_screw\"       , No6_screw        ],
-  [\"No8_screw\"       , No8_screw        ]
-]);
+verbs       = fl_verbList([FL_ADD,FL_ASSEMBLY,FL_AXES,FL_BBOX,FL_CUTOUT,FL_DRILL,FL_FOOTPRINT]);
+// echo(labels=[for(s=FL_SCREW_SPECS_INVENTORY) s[0]]);
+echo(LENGTH_MODE=LENGTH_MODE);
+inventory = fl_ScrewInventory(
+  name          = fl_cust_undef(SCREW_NAME,   _when_=SCREW_NAME==\"*\"        ),
+  length        = fl_cust_undef(SHAFT_LENGTH, _when_=LENGTH_MODE!=\"exact\"   ),
+  longer_than   = fl_cust_undef(SHAFT_LENGTH, _when_=LENGTH_MODE!=\"longer\"  ),
+  shorter_than  = fl_cust_undef(SHAFT_LENGTH, _when_=LENGTH_MODE!=\"shorter\" ),
+  head_name     = HEAD_TYPE,
+  head_spring   = fl_cust_undef(HEAD_SPRING),
+  head_washer   = fl_cust_undef(HEAD_WASHER),
+  nut_washer    = fl_cust_undef(NUT_WASHER),
+  nut_spring    = fl_cust_undef(NUT_SPRING),
+  nut           = fl_cust_undef(NUT),
+  thickness     = \$fl_thickness
+);
+echo(inventory=[for(screw=inventory) fl_name(screw)]);
 
-// enable nut washer only when nut is required
-nut_washer  = NUT!=\"no\" && NUT_WASHER;
+// list of unique ordered sizes from user selected screws
+sizes     = fl_list_sort(fl_list_unique([for(s=inventory) fl_nominal(s)]));
+// list organized by rows of screws with same nominal size
+dict      = fl_dict_organize(inventory,sizes,function(screw) fl_nominal(screw));
+for(row=dict) echo([for(screw=row) str(fl_name(screw),\"/\",fl_nominal(screw))]);
+// for each not empty row calculates the offsets along Y axis
+y_coords  = let(
+  y_offsets = [for(i=[0:len(dict)-1]) (i>0) ? 20 : 0]
+) fl_cumulativeSum(y_offsets);
 
-h_filter  = fl_switch(HEAD_TYPE,[[\"cap\",hs_cap], [\"pan\",hs_pan], [\"cs\",hs_cs], [\"hex\",hs_hex], [\"grub\",hs_grub], [\"cs cap\",hs_cs_cap], [\"dome\",hs_dome]]);
-n_filter  = NUT!=\"no\";
-
-if (screw)
-  screw_proxy(screw);
-else {
-  // ordered list of existing screw sizes
-  sizes     = fl_list_sort(fl_list_unique([for(s=FL_SCREW_DICT) fl_screw_nominal(s)]));
-  // filter items according to customizer input
-  items     = fl_screw_search(head_type=h_filter,nut=n_filter,washer=WASHER);
-  // build a dictionary organized by rows of screws with same nominal size
-  dict      = fl_dict_organize(items,sizes,function(screw) fl_screw_nominal(screw));
-  // for each not empty row calculates the offsets along Y axis
-  y_coords  = let(
-    y_offsets = [for(i=[0:len(dict)-1]) (i>0 && dict[i-1]) ? 20 : 0]
-  ) fl_cumulativeSum(y_offsets);
-
-  for(i=[0:len(dict)-1]) let(row=dict[i])
-    if (row) { // no empty row
-      wrappers  = [for(nop=row) Wrapper(nop)];
-      // row movement along Y axis
-      translate(Y(y_coords[i])) {
-        translate(-X(12))
-          label(str(\"⌀\",fl_screw_nominal(row[0])),halign=\"center\");
-        // horizontal layout of row screws
-        fl_layout(axis=+X,gap=3,types=wrappers)
-          screw_proxy(fl_screw(\$item));
-      }
+for(i=[0:len(dict)-1]) let(row=dict[i])
+  // row movement along Y axis
+  translate(Y(y_coords[i])) {
+    if (SCREW_NAME==\"*\")
+      translate(-X(12))
+        label(str(\"⌀\",fl_nominal(row[0])),halign=\"center\");
+    // horizontal layout of row screws
+    fl_layout(axis=+X,gap=3,types=row)
+      fl_screw(verbs,\$item,
+        head_spring = fl_cust_undef(HEAD_SPRING),
+        head_washer = fl_cust_undef(HEAD_WASHER),
+        nut_washer  = fl_cust_undef(NUT_WASHER),
+        nut_spring  = fl_cust_undef(NUT_SPRING),
+        nut         = fl_cust_undef(NUT),
+        octant=octant,direction=direction
+      );
     }
-}
-
-function Wrapper(nop) = let(
-  length  = FIXED_LEN ? FIXED_LEN : fl_screw_l(nop,len=FIXED_LEN?FIXED_LEN:undef,\$fl_thickness=T,washer=WASHER,nut=NUT,xwasher=XWASHER,nwasher=nut_washer)
-) [
-  fl_screw(value=nop),
-  fl_bb_corners(value=fl_bb_screw(nop,length)),
-];
 
 //! Draw text that always faces the camera
 module label(str, scale = 0.25, valign = \"baseline\", halign = \"left\")
   color(\"black\")
-    rotate(\$vpr != [0, 0, 0] ? \$vpr : [70, 0, 315])
+    fl_lookAtMe()
       linear_extrude(NIL)
         scale(scale)
-          text(str, valign = valign, halign = halign, font=\"Symbola:style=Regular\");
-"
+          text(str, valign = valign, halign = halign, font=\"Symbola:style=Regular\");"
