Refactor screw inventory handling and verb list initialization for improved clarity and consistency

--- a/tests/artifacts/spacer-test.conf
+++ b/tests/artifacts/spacer-test.conf
@@ -114,15 +114,15 @@ thickness = let(t= [
 
 scr_inventory = screw_lists[0]; // cap screws from NopSCADlib
 scr_size      = SCREW_SIZE!=\"no screw\" ? fl_atof(SCREW_SIZE) : undef;
-screw         = scr_size ? fl_list_filter(scr_inventory,fl_screw_byNominal(scr_size))[0] : undef;
+screw         = scr_size ? fl_ScrewInventory(nominal=scr_size)[0] : undef;
 knut          = KNUT_TYPE!=\"none\" ? assert(scr_size,\"***TEST ERROR***: specify a screw size for knut\") fl_knut_shortest(fl_knut_find(thread=KNUT_TYPE,nominal=scr_size)) : undef;
 assert(KNUT_TYPE==\"none\"||knut,str(\"***TEST ERROR***: no M\",SCREW_SIZE,\" \",KNUT_TYPE,\" knurl nut found in inventory\"));
-cs            = let(d=knut?fl_nominal(knut):screw?fl_screw_nominal(screw):undef)
+cs            = let(d=knut?fl_nominal(knut):screw?fl_nominal(screw):undef)
                 d ? fl_cs_search(d=d)[0] : undef;
 
 spacer = fl_Spacer(h_min=H_MIN,d_min=D_MIN,screw_size=scr_size,knut=knut);
 fl_spacer(verbs,spacer,thick=thickness,anchor=anchor,fillet=FILLET,octant=octant,direction=direction)
-  if (\$spc_verb==FL_LAYOUT)
+  if (\$spc_verb==FL_LAYOUT) {
     /*
      * CHILDREN LAYOUT: by default spacers layout children on the top of the ±Z
      * surfaces.
@@ -131,9 +131,9 @@ fl_spacer(verbs,spacer,thick=thickness,anchor=anchor,fillet=FILLET,octant=octant
       if (\$spc_thick)
         let(l=1.5*fl_spc_d(spacer))
           fl_cube(size=[l,l,\$spc_thick],octant=-\$spc_director,\$FL_ADD=\$FL_LAYOUT);
-  else if (\$spc_verb==FL_MOUNT) // SCREW MOUNT
+  } else
+    assert(\$spc_verb==FL_MOUNT,\$spc_verb)
     let(
-      htyp    = screw_head_type(screw),
-      washer  = (htyp==hs_cs||htyp==hs_cs_cap) ? \"no\" : \"nylon\"
-    ) fl_screw(FL_DRAW,screw,\$fl_thickness=\$spc_thickness,washer=washer,\$FL_ADD=\$FL_MOUNT,\$FL_ASSEMBLY=\$FL_MOUNT);
-"
+      htyp    = fl_screw_headType(screw),
+      washer  = (htyp==hs_cs||htyp==hs_cs_cap) ? \"no\" : \"default\"
+    ) fl_screw(FL_DRAW,screw,\$fl_thickness=\$spc_thickness,head_washer=washer,\$FL_ADD=\$FL_MOUNT,\$FL_ASSEMBLY=\$FL_MOUNT);"
