--- a/tests/vitamins/pcb_custom-test.conf
+++ b/tests/vitamins/pcb_custom-test.conf
@@ -71,17 +71,17 @@ T             = 2.5;
 
 
 TEST_CODE="
-verbs=[
-  if (\$FL_ADD!=\"OFF\")       FL_ADD,
-  if (\$FL_ASSEMBLY!=\"OFF\")  FL_ASSEMBLY,
-  if (\$FL_AXES!=\"OFF\")      FL_AXES,
-  if (\$FL_BBOX!=\"OFF\")      FL_BBOX,
-  if (\$FL_CUTOUT!=\"OFF\")    FL_CUTOUT,
-  if (\$FL_DRILL!=\"OFF\")     FL_DRILL,
-  if (\$FL_FOOTPRINT!=\"OFF\") FL_FOOTPRINT,
-  if (\$FL_LAYOUT!=\"OFF\")    FL_LAYOUT,
-  if (\$FL_PAYLOAD!=\"OFF\")   FL_PAYLOAD,
-];
+verbs = fl_verbList([
+  FL_ADD,
+  FL_ASSEMBLY,
+  FL_AXES,
+  FL_BBOX,
+  FL_CUTOUT,
+  FL_DRILL,
+  FL_FOOTPRINT,
+  FL_LAYOUT,
+  FL_PAYLOAD
+]);
 
 pcb = let(
     pcb_t = 1.6,
@@ -103,9 +103,8 @@ pcb = let(
     // pcb thickness
     thick = pcb_t,
     color  = \"DarkCyan\",
-    holes = let(r=0.75,d=r*2) [for(i=[0:len(holes)-1]) fl_Hole(holes[i],d,+Z,0,screw=M2_cap_screw)],
+    holes = let(r=0.75,d=r*2) [for(i=[0:len(holes)-1]) fl_Hole(holes[i],d,+Z,0,nop_screw=M2_cap_screw)],
     components=comps
   );
 
-fl_pcb(verbs,pcb,direction=direction,octant=octant,thick=T);
-"
+fl_pcb(verbs,pcb,direction=direction,octant=octant,thick=T);"
