--- a/tests/vitamins/screw-test.conf
+++ b/tests/vitamins/screw-test.conf
@@ -101,9 +101,9 @@ verbs       = fl_verbList([FL_ADD,FL_ASSEMBLY,FL_AXES,FL_BBOX,FL_CUTOUT,FL_DRILL
 echo(LENGTH_MODE=LENGTH_MODE);
 inventory = fl_ScrewInventory(
   name          = fl_cust_undef(SCREW_NAME,   _when_=SCREW_NAME==\"*\"        ),
-  length        = fl_cust_undef(SHAFT_LENGTH, _when_=LENGTH_MODE!=\"exact\"   ),
-  longer_than   = fl_cust_undef(SHAFT_LENGTH, _when_=LENGTH_MODE!=\"longer\"  ),
-  shorter_than  = fl_cust_undef(SHAFT_LENGTH, _when_=LENGTH_MODE!=\"shorter\" ),
+  length        = fl_cust_undef(SHAFT_LENGTH, _if_=0, _when_=LENGTH_MODE!=\"exact\"   ),
+  longer_than   = fl_cust_undef(SHAFT_LENGTH, _if_=0, _when_=LENGTH_MODE!=\"longer\"  ),
+  shorter_than  = fl_cust_undef(SHAFT_LENGTH, _if_=0, _when_=LENGTH_MODE!=\"shorter\" ),
   head_name     = HEAD_TYPE,
   head_spring   = fl_cust_undef(HEAD_SPRING),
   head_washer   = fl_cust_undef(HEAD_WASHER),
