--- a/tests/foundation/traits-engine-test.conf
+++ b/tests/foundation/traits-engine-test.conf
@@ -4,8 +4,9 @@ TEST_TEMPLATE="template-nogui.scad"
 TEST_PROLOGUE="$PROLOGUE_NOGUI"
 
 TEST_INCLUDES="
-include <../../lib/OFL/foundation/traits-engine.scad>
 include <../../lib/OFL/foundation/unsafe_defs.scad>
+
+use     <../../lib/OFL/foundation/traits-engine.scad>
 "
 
 TEST_CODE="
